--- a/release/v0.37.4/darwin-x64/urinal-checkmate.app/Contents/Resources/app/index.html
+++ b/release/v0.37.4/darwin-x64/urinal-checkmate.app/Contents/Resources/app/index.html
@@ -26,7 +26,7 @@
   <div class="container" v-if="endgame == true">
     <h2 class="score">You scored {{ score }} out of {{ restroom.length }} checkmates.</h2>
     <div class="sharing">
-      <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fharrypujols.com/urinal-checkmate&text=I&nbsp;got&nbsp;{{ score }}&nbsp;out&nbsp;of&nbsp;{{ restroom.length }}&nbsp;checkmates&nbsp;in&nbsp;men&nbsp;urinals&nbsp;" target="_blank" class="twitter"><div v-include="'img/twitter.svg'" ></div></a>
+      <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fharrypujols.com/urinal-checkmate&text=I&nbsp;got&nbsp;{{ score }}&nbsp;out&nbsp;of&nbsp;{{ restroom.length }}&nbsp;checkmates&nbsp;in&nbsp;men&nbsp;urinals&nbsp;" target="_blank" class="twitter"><div v-include="img/twitter.svg" ></div></a>
     </div>
     <button class="button" v-on:click="restart">Restart?</button>
   </div>
