--- a/app/index.html
+++ b/app/index.html
@@ -1,37 +1,68 @@
 <!DOCTYPE html>
-<html lang="en" id="urinal-checkmate">
+<html lang="en" class="app">
 <head>
   <meta charset="UTF-8">
-  <title>{{ page.name }}</title>
+  <title>Clock</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
-  <div class="container" v-cloak>
-    <h1 class="{{ page.message == 'wrong' ? 'message alert' : 'message' }}">{{ page.message }}</h1>
-    <div v-if="endgame == false">
-      <ul class="restroom" v-bind:style="{ width: urinals * 100 + 'px'}">
-          <li class='urinal'
-          v-for="n in urinals"
-          v-droppable="drop"
-          id="{{ n == checkmate ? 'correct' : 'urinal-' + n }}">
-          <div v-if="enemy.indexOf(n) >= 0" v-include="img/man.svg" class="red man"></div>
-        </li>
-      </ul>
-      <div id="start-position">
-        <div class="regular man" v-include="img/man.svg" v-draggable id="man"></div>
-        <button class="button" v-if="reload" v-on:click="continue">Continue</button>
+<body id="app" class="app">
+  <div v-if="!loaded" class="vertical intro">
+    <h1 class="center">Clock</h1>
+    <img src="img/time.svg" alt="clock">
+    <small class="center">By Harry</small>
+  </div>
+  <div v-else class="app">
+    <input type="checkbox" id="toggleclass" v-model="expand">
+    <label for="toggleclass"><i class="icon-cog"></i></label>
+    <div v-if="loaded" id="outer-wrapper" class="vertical" v-cloak>
+      <div id="wrapper" v-bind:class="{ expanded : expand }">
+        <div id="pushover-menu">
+          <div class="pref-panel">
+            <input type="checkbox" id="toggletime" v-model="prefs.hour12" class="pref">
+            <label for="toggletime"><span>24</span><span>12</span></label>
+          </div>
+          <div class="pref-panel">
+            <input type="checkbox" id="toggledegree" v-model="prefs.fahrenheit" class="pref">
+            <label for="toggledegree"><span>C</span><span>F</span></label>
+          </div>
+        </div>
+        <!-- main content -->
+        <div class="container">
+          <h2 class="main">
+            {{ clock }}
+            <sup class="sup" v-if="prefs.hour12">{{ pm ? 'PM' : 'AM'}}</sup>
+          </h2>
+        </div>
+        <div class="container">
+          <b class="title cell">{{ current.display_location.city }}</b>
+          <span>{{ forecast[0].date.weekday_short }}, {{ forecast[0].date.monthname }} {{ forecast[0].date.day}}</span>
+        </div>
+        <div class="container horizontal">
+            <h2 v-if="prefs.fahrenheit" class="main cell">
+              {{ current.temp_f | rounded }}<i class="icon-fahrenheit"></i>
+            </h2>
+            <h2 v-else class="main cell">
+              {{ current.temp_c | rounded }}<i class="icon-celsius"></i>
+            </h2>
+          <div class="icon cell">
+            <div class="weather"><i class="icon-{{ current.icon }}"></i></div>
+            <div><i class="icon-humidity"></i>&nbsp;{{ current.relative_humidity }}</div>
+          </div>
+          <div v-if="prefs.fahrenheit" class="icon cell">
+            <div class="vertical-cell"><i class="icon-thermometer"></i>&nbsp;{{ forecast[0].low.fahrenheit }}<i class="icon-degree"></i></div>
+            <div class="vertical-cell"><i class="icon-mercury"></i>&nbsp;{{ forecast[0].high.fahrenheit }}<i class="icon-degree"></i></div>
+          </div>
+          <div v-else class="icon cell">
+            <div class="vertical-cell"><i class="icon-thermometer"></i>&nbsp;{{ forecast[0].low.celsius }}<i class="icon-degree"></i></div>
+            <div class="vertical-cell"><i class="icon-mercury"></i>&nbsp;{{ forecast[0].high.celsius }}<i class="icon-degree"></i></div>
+          </div>
+        </div>
+        <!-- main content -->
       </div>
     </div>
   </div>
-  <div class="container" v-if="endgame == true">
-    <h2 class="score">You scored {{ score }} out of {{ restroom.length }} checkmates.</h2>
-    <div class="sharing">
-      <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fharrypujols.com/urinal-checkmate&text=I&nbsp;got&nbsp;{{ score }}&nbsp;out&nbsp;of&nbsp;{{ restroom.length }}&nbsp;checkmates&nbsp;in&nbsp;men&nbsp;urinals&nbsp;" target="_blank" class="twitter"><div v-include="img/twitter.svg" ></div></a>
-    </div>
-    <button class="button" v-on:click="restart">Restart?</button>
-  </div>
-  <script src="js/vue.js"></script>
-  <script src="js/vendor.js"></script>
-  <script src="js/app.js"></script>
+ <script src="js/vue.js"></script>
+ <script src="js/vue-resource.js"></script>
+ <script src="js/app.js"></script>
 </body>
 </html>
